--- a/view/index.html
+++ b/view/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página principal</title>
+    
 </head>
+    <p> Elige tu persona </p>
+
+
 <body>
     
 </body>
