Página principal y registro

--- a/view/index.html
+++ b/view/index.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="keywords" content="maids, servicios-en-casa">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página principal</title>
-    
+    <title>Página Principal</title>
 </head>
-    <p> Elige tu persona </p>
-
-
 <body>
+    <nav class="barra-nav";>
+        <p class="img" id="opcionImg">imagen</p>
+        <li id="barra-opcion">
+            <ul id="opcion"><button class="btnopcion">Inicio</button></ul>
+            <ul id="opcion"><button class="btnopcion">Objetivo</button></ul>
+            <ul id="opcion"><button class="btnopcion">Conócenos</button></ul>
+            <ul id="opcion"><button class="btnopcion">Requisitos</button></ul>
+            <ul id="opcion"> <a id="btnregistro" class="btnopcion" href="registro.html"> Registrate</a></ul>
+        </li>
+    </nav>
     
+    <p class="parrafo"; > Elige tu persona </p>
+    
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div id="contenido">
+    <table class="tabla-contenido"; border="1.5" align="center">
+        <tr>
+          <td id="celda"> 
+               <div id="imgtrabajadora">imagen</div>
+               <input type="button" id="botontrabajadora" value="Erendira">
+          </td>
+          <td id="celda">
+                <div id="imgtrabajadora">imagen</div>
+                <input type="button" id="botontrabajadora" value="Josefina"></td>
+          <td id="celda">
+            <div id="imgtrabajadora">imagen</div>
+            <input type="button" id="botontrabajadora" value="Lili">
+        </td>
+          <td id="celda">
+            <div id="imgtrabajadora">imagen</div>
+            <input type="button" id="botontrabajadora" value="Ale">
+          </td>
+          <td id="celda">
+            <div id="imgtrabajadora">imagen</div>
+            <input type="button" id="botontrabajadora" value="Alejandrina">
+          </td>
+        </tr>
+        <tr>
+          <td id="celda">
+            <div id="imgtrabajadora">imagen</div>
+            <input type="button" id="botontrabajadora" value="Rubi">
+          </td>
+          <td id="celda">
+            <div id="imgtrabajadora">imagen</div>
+            <input type="button" id="botontrabajadora" value="Reyna">
+          </td>
+          <td id="celda">
+            <div id="imgtrabajadora">imagen</div>
+            <input type="button" id="botontrabajadora" value="Jose">
+          </td>
+        </tr>
+      </table>
+    </div>
 </body>
 </html>
